# gccpl1

./: .dockerignore  .gitignore  .gitmodules  README.md  build.cmd  build.sh
_docker/: dockerfile  dockerfile_texinfo
docs/: README.md
docs/pl1-ref/: gpli-language-ref.texi  gpli-programming-ref.texi
src-antlr/src-parser/: CMakeLists.txt  Pl1Lexer.g4  Pl1Parser.g4  main.cpp
src-antlr/src-parser/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
src-antlr/src-parser/src-tests/: A_BASIC_GENERATOR.pl1  BASIC_GENERATOR.pl1  PL1_TEST_ASSIGNMENT.pl1  PL1_TEST_CONDITIONS.pl1  PL1_TEST_CONSTANTS.pl1  PL1_TEST_DCL.pl1  PL1_TEST_DEFAULT.pl1  PL1_TEST_DO.pl1  PL1_TEST_IF.pl1  PL1_TEST_IO.pl1  PL1_TEST_KEYWORDS.pl1  PL1_TEST_KEYWORDS_PROCPROC.pl1  PL1_TEST_LABEL.pl1  PL1_TEST_MISC.pl1  PL1_TEST_PROCEDURE.pl1  PL1_TEST_SCOPE.pl1  PL1_TEST_SELECT.pl1  PL1_TEST_STORAGE.pl1  SIMPLE.pl1  testall.sh
src-antlr/src-parser/src-tests/HALFTON/: BOATPRT.PLI  BOATUPD.PLI  BUILD.PLI  COPYINF.PLI  DAYCALC.PLI  DAYPRT.PLI  DAYSRT.PLI  DCLGEN.PLI  DISCSRT.PLI  FIDDLE.PLI  FLAGUPD.PLI  MISSING.PLI  OLDCALC.PLI  OVERSRT.PLI  PRODPRT.PLI  RACEIN.PLI  RACEINFO.PLI  RACESRT.PLI  RACEUPD.PLI  TABBLD.PLI  TABINFO.PLI  TABUPD.PLI  TOTCALC.PLI  TOTPRT.PLI  TOTPRT2.PLI  testall.sh
src-antlr/src-parser/src-tests/HALFTON/include/: CTLCHARS.PLI  DCLHEAD.PLI  DCLIN.PLI  DCLINFO.PLI  DCLRACE.PLI  DCLRESLT.PLI  DCLTABLE.PLI  OLDINFO.PLI
src-antlr/src-parser/src-tests/include/: A_PL1_TEST_INCLUDE.pl1  PL1_TEST_INCLUDE.pl1  PL1_TEST_INCLUDE_hasDCL.pl#  aa  aname.pl1  yygenbb  yygenbb1  yygenbb2  yygenbb3
src-antlr/src-parser/src-tests/pl1pp/: PL1-PREPROCESSOR.pl1  PL1TEST.pl1  PL1_TEST_001.pl1  PL1_TEST_KEYWORDS_PP.pl1
src-gcc-gpli/: Make-lang.in  config-lang.in  gpli-convert.cc  gpli-parser.cc  gpli-parser.h  gpli1.cc  gplispec.cc  lang-specs.h  lang-specs.in  lang.opt
src-gcc-tiny/: tiny-lexer.h  tiny-scope.cc
src-parser/: main.cpp  pl1lexer.g4  pl1parser.g4
